# starkveil

./: .gitignore  CORE_MECHANICS.md  README.md  audit_prompt.txt  check_deployed.js  deploy_and_fund.sh  deploy_contract.js  deploy_contract.mjs  deploy_privacy_pool.sh  empty_poseidon.js  implementation_plan.md  keccak_test.py  package-lock.json  package.json  redeploy.mjs  rpc_test.js  selector_test.js  steps.md  test_alt_rpc.js  test_class_hash.js  test_contract.js  test_deployed.js  test_error41.js  test_events.js  test_hex.swift  test_idx.js  test_lava.js  test_nsdecimal_hex.swift  test_p_transfer.swift  test_proof.js  test_proof.swift  test_root.js  test_shield.sh  test_transfer.js  test_transfer.sh  txhash_test.js  txhash_test.swift
StarkVeil_UI_Prototype/: index.html  script.js  styles.css
audits/: phase16_audit.md  phase1_audit.md  phase2_audit.md  phase3_audit.md  phase4_audit.md  phase5_audit.md  phase6_audit.md  phase7_audit.md  phase8_audit.md  phase9_to_20_audit.md
contracts/: Scarb.toml  snfoundry.toml
contracts/src/: interfaces.cairo  lib.cairo  merkle_tree.cairo  privacy_pool.cairo  stwo_verifier.cairo  types.cairo
contracts/tests/: test_privacy_pool.cairo  test_storage.cairo
deployer/: account.json
ios/StarkVeil/: StarkVeilApp.swift
ios/StarkVeil/Core/: StarkVeilProver.swift  SyncEngine.swift  WalletManager.swift
prover/: Cargo.toml  build_ios.sh  rust-toolchain.toml  starkveil_prover.h
prover/src/: bin_test.rs  circuit.rs  lib.rs  types.rs
prover/src/stark/: air.rs  channel.rs  fields.rs  fri.rs  merkle.rs  mod.rs  prover.rs
(+58 files in other folders)
