[package]
name = "starkveil_prover"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["staticlib", "cdylib"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
libc = "0.2"
# Phase 12: Real Starknet cryptography
# starknet-crypto provides: pedersen_hash, poseidon_hash, stark_pubkey (EC multiply), ECDSA sign/verify
starknet-crypto = "0.6"
