[package]
name = "starkveil_prover"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["staticlib", "cdylib"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
libc = "0.2"
# Phase 12: Real Starknet cryptography
# starknet-crypto provides: pedersen_hash, poseidon_hash, stark_pubkey (EC multiply), ECDSA sign/verify
starknet-crypto = "0.6"
# Phase 18: RFC-6979 deterministic ECDSA nonce (H-2 fix — removes caller-supplied k)
rfc6979 = "0.4"
sha2 = "0.10"
# Phase 20: Stwo STARK prover — Circle STARK proof generation (replaces mock verification)
# Core types only — constraint evaluation uses starknet-crypto Poseidon for iOS compatibility
stwo = { version = "2.1", default-features = false }
# Random number generation for proof blinding factors
rand = "0.8"
